Replace mock payables in dashboard pending-approvals with real data
GET /dashboard/pending-approvals returned two hardcoded payables
(Emirates Supplies Co / Dubai Logistics, random UUIDs) to the Treasury
dashboard, Classic dashboard and Cockpit. It now returns real payables the
user can act on: PENDING_APPROVAL, or APPROVED/SCHEDULED/PARTIAL/POBO_APPROVED
with a source VA (the same condition Pay Now requires). Ordered by due date,
list capped at 5, payablesCount is the true total, and each row carries
currencyCode, status and action (APPROVE | PAY). Optional corporateId scopes
it; unscoped behaviour is unchanged.

Verified against the DB: 2 pending-approval payables, 0 payable-now, matching
the endpoint; corporateId=TestMNC returns both, Mercator returns none.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>